--- a/DM553/Ordbog.tex
+++ b/DM553/Ordbog.tex
@@ -31,7 +31,7 @@ Dette er alle de ord og termer der bruges i kurset, oversat til dansk. Bemærk a
   Nondeterministic & Nondeterministisk \\
   Encodning & Kodning, Indkodning \\
   Enumerator & Enumerator \\
-  The Church_Turing Thesis & Church-Turing-tesen \\
+  The Church\_Turing Thesis & Church-Turing-tesen \\
   Acceptance Problem & Acceptproblem \\
   Regular & Regulær \\
   Context-free & Kontekstfri\\
