--- a/DM553/preamble.tex
+++ b/DM553/preamble.tex
@@ -30,6 +30,9 @@
 \setdefaultlanguage{danish}
 \setotherlanguages{english}
 
+% Til ordbogen
+\usepackage{longtable}
+
 % To be able to use '\-/' in place of '-' inside \code{}
 % so that long function names containing hyphens
 % can be broken up after the hyphen:
