--- a/DM553/KontekstFrieSprog.tex
+++ b/DM553/KontekstFrieSprog.tex
@@ -184,6 +184,7 @@ Chomsky Normal Form er en form af en kontekstfri grammatik. Bemærk at den også
 \end{definition}
 
 \begin{theorem}
+  \label{teo:cnf}
 	Ethvert kontekstfri sprog er genereret af en kontekstfri grammatik i Chomsky Normal Form.
 \end{theorem}
 
